Fixed the project page title and spacing

--- a/iiCt/src/app/project-work/project-work.component.css
+++ b/iiCt/src/app/project-work/project-work.component.css
@@ -38,6 +38,10 @@
   margin-right: -2rem;
 }
 
+.left-space {
+  padding-left:  50px;
+}
+
 .left-title {
   font-weight: bolder;
   font-size: 4rem;
@@ -46,12 +50,28 @@
 hr {
   height: 10px;
   width: 400px;
-  margin-left: -1.1rem;
+  margin-left: -6rem;
   border-width: 10px;
-  border-color: #545454;
+  border-color: #ff914d;
   margin-top: 10px;
 }
 
 .move-down {
   margin-top: 190px;
+}
+
+h1 {
+  padding-left: 10px;
+  font-stretch: extra-condensed;
+}
+
+h2 {
+  padding-bottom: 75px;
+}
+
+h5 {
+  margin: 0;
+  padding-top: 5px;
+  text-align: center;
+
 }
